About section fix, images covering div fix

--- a/src/css/Introduction.scss
+++ b/src/css/Introduction.scss
@@ -24,9 +24,10 @@
 
 .intro-img {
   margin: 0 auto;
-
   border-radius: 10px;
   height: 100%;
+
+  object-fit: cover;
 }
 
 .intro-button {
