--- a/src/css/MediaQuery.scss
+++ b/src/css/MediaQuery.scss
@@ -52,27 +52,49 @@
     max-height: 500px;
     width: 100%;
   }
+  .skills-description {
+    width: 90%;
+    margin: 50px auto 50px auto;
+  }
+  #about {
+    max-width: 90%;
+  }
   #about-text {
-    // width: 40%;
-    margin-bottom: 30px;
-
-    text-align: left;
+    width: 90%;
+    margin: 0 auto;
+    text-align: center;
   }
   .about-content {
-    align-content: center;
     align-items: center;
-    display: block;
+    // display: block;
   }
 
   .about-image {
-    margin: 0 auto;
+    height: 100%;
+    object-fit: cover;
+    margin: 40px auto;
+    width: 80%;
+    max-height: 500px;
   }
+  .about-text-bottom {
+display: none;
+  }
+
 }
 
 @media screen and (min-width: 1201px) {
   #about-text {
-    width: 40%;
+
     // text-align: left;
+  }
+  #about-text {
+    // margin-bottom: 30px;
+
+    text-align: left;
+  }
+  .skills-description {
+    width: 60%;
+    margin: 50px auto 50px auto;
   }
   .intro-container {
     display: flex;
@@ -84,15 +106,33 @@
     width: 45%;
   }
   .about-content {
+    margin: 0 auto;
     align-content: center;
     align-items: center;
-    display: flex;
+    display: grid;
+    grid-column-gap: 30px;
+    grid-template-columns: 1fr 1.1fr;
+    max-width: 90%;
   }
- 
-  .about-image {
 
- max-height: 500px;
+  .about-image {
+    border-radius: 10px;
+
+    // max-height: 700px;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
     margin: 0 auto;
+  }
+  .about-text-bottom {
+    color: var(--textColor03);
+    font-size: 0.8rem;
+    display: flex;
+    justify-content: space-between;
+margin-top: 20px;
+    & p:last-child {
+      text-align: right;
+    }
   }
 }
 
