--- a/src/css/_themes.scss
+++ b/src/css/_themes.scss
@@ -7,7 +7,7 @@ $primaryColor01-50-light: #8d9dff;
 $secondaryColor02-light: #19849d;
 $textColor01-light: #303238;
 $textColor02-light: #62636c;
-$textColor03-light: #b9b9c075;
+$textColor03-light: #a5a5a5d5;
 $grey-100-light: #3d3d3d;
 $grey-50-light: #696969;
 $grey-10-light: #cecece;
@@ -145,9 +145,19 @@ $boxShadowBasic: 0 0 20px 5px rgba(0, 0, 0, 0.15);
 }
 
 
-@media screen and (min-width: 1200px) {
+@media screen and (min-width: 1201px) {
   .section-container {
-    padding: 30px 50px 100px 50px;
+    padding: 50px 50px 50px 50px;
+
+  }
+  .section-head {
+    margin: 0 auto 40px auto;
+  }
+}
+
+@media screen and (max-width: 1200px) {
+  .section-head {
+    margin: 0 auto 40px auto;
   }
 }
 
